--- a/data-analyst.html
+++ b/data-analyst.html
@@ -103,7 +103,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hitchcock.referrals.selectminds.com/jobs/healthcare-data-analyst-value-reporting-analytics-ft-days-6815'>Healthcare Data Analyst-Value Reporting & Analytics (FT), Days - Dartmouth-Hitchcock Careers</a></h5> 
+<h5><a href='https://hitchcock.referrals.selectminds.com/jobs/healthcare-data-analyst-value-reporting-analytics-ft-days-6815'>Healthcare Data Analyst-Value Reporting & Analytics (FT), Days - Dartmouth-Hitchcock Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -143,7 +143,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/labineassociates/job/aki57ar6q9a9u1zezm73rgdqny'>Sr Digital marketing data analyst | Job Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/labineassociates/job/aki57ar6q9a9u1zezm73rgdqny'>Sr Digital marketing data analyst | Job Opportunities</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -151,7 +151,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -163,7 +163,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/themergermarketgroup/job/oTypbfwL'>Acuris Careers - Part-Time Market Data Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/themergermarketgroup/job/oTypbfwL'>Acuris Careers - Part-Time Market Data Analyst</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -206,7 +206,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/finix/ecf78eb3-07d4-49bf-b521-316330f11db5'>Finix - Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/finix/ecf78eb3-07d4-49bf-b521-316330f11db5'>Finix - Data Analyst</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -289,7 +289,7 @@ organization?...</p>
 <p><span class="badge badge-light">Tempe, ?tats-Unis</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sokratipune.recruiterbox.com/jobs/fk0go4/'>
+<h5><a href='https://sokratipune.recruiterbox.com/jobs/fk0go4/'>
     Data Analyst  at Merkle Sokrati
 </a></h5> 
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
@@ -301,7 +301,7 @@ organization?...</p>
 <p><span class="badge badge-light">Montr?al, Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kyivstar/f6efa962-89d1-4db6-bdd2-e48a454781f4'>Kyivstar - Data Analyst BI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kyivstar/f6efa962-89d1-4db6-bdd2-e48a454781f4'>Kyivstar - Data Analyst BI</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -370,7 +370,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/insitesconsulting/job/oMlobfwq'>InSites Consulting Careers - Junior Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/insitesconsulting/job/oMlobfwq'>InSites Consulting Careers - Junior Data Analyst</a></h5> 
 <p><span class="badge badge-light">Sydney Australia  Sydney</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -388,7 +388,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theice.referrals.selectminds.com/jobs/nyse-market-data-product-analyst-1094'>NYSE Market Data Product Analyst - Intercontinental Exchange Careers</a></h5> 
+<h5><a href='https://theice.referrals.selectminds.com/jobs/nyse-market-data-product-analyst-1094'>NYSE Market Data Product Analyst - Intercontinental Exchange Careers</a></h5> 
 <p><span class="badge badge-light">United States, NY, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -396,7 +396,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://postings.com/recruiter-1130798/jobs/science-biotech/remote-principal-sr-principal-biostatistician-durham-nc-2710/83975'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postings.com/recruiter-1130798/jobs/science-biotech/remote-principal-sr-principal-biostatistician-durham-nc-2710/83975'>
 Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori Steiner
 </a></h5> 
 <p><span class="badge badge-light">Durham, NC</span></p>
@@ -448,7 +448,7 @@ Analyst at The Office of Inspector General (OIG), Office of Audits (AUD), Audit?
 <p>Oct 16, 2019 ... The DC Operations Analyst is responsible for the management and operation of 
 the storage, virtual data centre infrastructures, infrastructure and application?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/tiki-corporation/j/47DBC06E7A/'>Customer Analytics - Data Analyst - Tiki Corporation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/tiki-corporation/j/47DBC06E7A/'>Customer Analytics - Data Analyst - Tiki Corporation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 18, 2019 ... These questions are just some of the thoughts you'll be helping us explore as 
 Strategic Data Scientist / Chief Customer Analyst. This role reports directly to our
